# gensou-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cli.js  package-lock.json  package.json  webpack.config.js
include/: fields.h  swrs.h
lib/: options.js  service.js  tts.js
lib/bundle/: challonge.js  soku-events.js
lib/bundle/component/: notifier.js
lib/bundle/style/: challonge.scss  notifier.scss  soku-events.scss
lib/bundle/template/: card.html  challonge.html  deck-view.html  match-complete.html  match-started.html  notifier.html  portrait.html  soku-events.html  tournament-started.html
src/: events.hpp  main.cpp  server.hpp
